syntax = "proto3";

package auth.v1;

option go_package = "github.com/morning-night-dream/platform/pkg/api/auth/v1;authv1";

// 認証サービス
service AuthService {
  // サインアップ
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  // サインイン
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  // サインアウト
  rpc SignOut(SignOutRequest) returns (SignOutResponse) {}
}

// サインアップリクエスト
message SignUpRequest {
  string email = 1;
  string password = 2;
}

// サインアップレスポンス
message SignUpResponse {}

// サインインリクエスト
message SignInRequest {
  string login_id = 1;
  string password = 2;
}

// サインインレスポンス
message SignInResponse {}

// サインアウトリクエスト
message SignOutRequest {
  string login_id = 1;
}

// サインアウトレスポンス
message SignOutResponse {}

